Fixed overflow of syonyms being clipped

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -78,6 +78,7 @@
         background: none;
         min-height: 10em;
         padding-bottom: 2em;
+        overflow: visible;
     }
 }
 
